--- a/e2e/tix.global-config.json
+++ b/e2e/tix.global-config.json
@@ -1,9 +1,11 @@
 {
-    "envName": "staging",
-    "loginUserType": "supplier",
+    "envName": "uat",
+    "loginUserType": "admin",
     "specsList": {
         "admin": [
-            "./e2e/user-login/tests/*.login-spec.ts"
+            "./e2e/user-login/tests/*.login-spec.ts",
+            "./e2e/admin/tests/*.tix.smoke-test.specs.ts"
+            
         ],
         "supplier": [
             "./e2e/user-login/tests/*.login-spec.ts",
