some code changes

--- a/e2e/tix.global-config.json
+++ b/e2e/tix.global-config.json
@@ -1,15 +1,10 @@
 {
     "envName": "uat",
-<<<<<<< HEAD
     "loginUserType": "admin",
-=======
-    "loginUserType": "supplier",
->>>>>>> 11e60dd9d1e291abd1dbe0f06af4761db040f740
     "specsList": {
         "admin": [
             "./e2e/user-login/tests/*.login-spec.ts",
-            "./e2e/admin/tests/*.tix.smoke-test.specs.ts"
-            
+            "./e2e/admin/tests/*.smoke-test-specs.ts"
         ],
         "supplier": [
             "./e2e/user-login/tests/*.login-spec.ts",
