Implementing specs of suit id C115, C116, some generalization in global config file and creating POM for logout option

--- a/e2e/supplier/resources/tix.uat-config.json
+++ b/e2e/supplier/resources/tix.uat-config.json
@@ -1,7 +1,7 @@
 {
-    "appUrl": "https://app.uat.tradeix.com/",
+    "appUrl": "https://app.uat.tradeix.com",
     "loginCredentials": {
-        "username": "supplier5@tix.com",
+        "username": "supplier3@tix.com",
         "password": "tradeix~1"
     }
 }
