--- a/e2e/tix.global-config.json
+++ b/e2e/tix.global-config.json
@@ -1,17 +1,18 @@
 {
     "envName": "uat",
-    "loginUserType": "admin",
-    "specsList": {
+    "loginUserType": "supplier",
+    "specs": {
         "admin": [
-            "./e2e/user-login/tests/*.login-spec.ts",
             "./e2e/admin/tests/*.smoke-test-specs.ts"
         ],
         "supplier": [
-            "./e2e/user-login/tests/*.login-spec.ts",
             "./e2e/supplier/tests/*.dashboard-spec.ts"
-        ]
+        ],
+        "login": "./e2e/user-login-logout/tests/*.login-spec.ts",
+        "logout": "./e2e/user-login-logout/tests/*.logout-spec.ts"
     },
     "browserName": "chrome",
     "defaultSpecDelayTime": 1500,
+    "showSpecReport": true,
     "showHtmlReport": true
 }
