--- a/e2e/tix.global-config.json
+++ b/e2e/tix.global-config.json
@@ -1,6 +1,6 @@
 {
     "envName": "uat",
-    "loginUserType": "supplier",
+    "loginUserType": "admin",
     "specs": {
         "admin": [
             "./e2e/admin/tests/*.smoke-test-specs.ts"
