--- a/e2e/tix.global-config.json
+++ b/e2e/tix.global-config.json
@@ -3,7 +3,10 @@
     "loginUserType": "admin",
     "specs": {
         "admin": [
-            "./e2e/admin/tests/*.smoke-test-specs.ts"
+            "./e2e/admin/tests/*.dashboard-test-specs.ts",
+            "./e2e/admin/tests/*.invoice-ledger-test-specs.ts",
+            "./e2e/admin/tests/*.bid-offer-ledger-test-specs.ts",
+            "./e2e/admin/tests/*.company-manager-test-specs.ts"
         ],
         "supplier": [
             "./e2e/supplier/tests/*.dashboard-spec.ts"
