--- a/e2e/tix.global-config.json
+++ b/e2e/tix.global-config.json
@@ -6,7 +6,8 @@
             "./e2e/admin/tests/*.dashboard-test-specs.ts",
             "./e2e/admin/tests/*.invoice-ledger-test-specs.ts",
             "./e2e/admin/tests/*.bid-offer-ledger-test-specs.ts",
-            "./e2e/admin/tests/*.company-manager-test-specs.ts"
+            "./e2e/admin/tests/*.company-manager-test-specs.ts",
+            "./e2e/admin/tests/*.entity-type-test-specs.ts"
         ],
         "supplier": [
             "./e2e/supplier/tests/*.dashboard-spec.ts"
