user login password changed

--- a/e2e/admin/resources/tix.uat-config.json
+++ b/e2e/admin/resources/tix.uat-config.json
@@ -5,8 +5,8 @@
     },
     "appUrl": "https://app.uat.tradeix.com/",
     "loginCredentials": {
-        "username": "admin@tix.com",
-        "password": "tradeix~1"
+        "username": "abc@tix.com",
+        "password": "********"
     },
     "company": {
         "create": {
