--- a/e2e/admin/resources/tix.staging-config.json
+++ b/e2e/admin/resources/tix.staging-config.json
@@ -1,7 +1,7 @@
 {
     "appUrl": "https://app.staging.tradeix.net/",
     "loginCredentials": {
-        "username": "admin@tix.com",
-        "password": "tradeix~1"
+        "username": "abc@tix.com",
+        "password": "********"
     }
 }
