--- a/e2e/supplier/resources/tix.uat-config.json
+++ b/e2e/supplier/resources/tix.uat-config.json
@@ -1,7 +1,7 @@
 {
     "appUrl": "https://app.uat.tradeix.com",
     "loginCredentials": {
-        "username": "supplier3@tix.com",
-        "password": "tradeix~1"
+        "username": "abc@tix.com",
+        "password": "********"
     }
 }
