--- a/e2e/tix.global-config.json
+++ b/e2e/tix.global-config.json
@@ -1,5 +1,5 @@
 {
-    "envName": "staging",
+    "envName": "uat",
     "loginUserType": "supplier",
     "specs": {
         "admin": [
@@ -10,7 +10,7 @@
             "./e2e/admin/tests/*.entity-type-test-specs.ts"
         ],
         "supplier": [
-            
+            "./e2e/supplier/tests/*.dashboard-spec.ts"
         ],
         "login": "./e2e/user-login/tests/*.login-spec.ts",
         "logout": "./e2e/user-login/tests/*.logout-spec.ts"
